--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ description = "ERPNext & Frappe Business Chat: A self-hosted communication solut
 readme = "README.md"
 dynamic = ["version"]
 dependencies = [
-  moviepy~=1.0.3,
-  pydub~=0.25.1,
-  pyfcm
+  "moviepy~=1.0.3",
+  "pydub~=0.25.1",
+  "pyfcm"
 ]
 
 [deploy.dependencies.apt]
