--- a/clefincode_chat/clefincode_chat/doctype/clefincode_whatsapp_profile_detail/clefincode_whatsapp_profile_detail.json
+++ b/clefincode_chat/clefincode_chat/doctype/clefincode_whatsapp_profile_detail/clefincode_whatsapp_profile_detail.json
@@ -1,37 +1,29 @@
 {
  "actions": [],
  "allow_rename": 1,
- "creation": "2024-01-02 14:40:50.802543",
+ "creation": "2024-08-11 12:56:27.894797",
  "doctype": "DocType",
  "editable_grid": 1,
  "engine": "InnoDB",
  "field_order": [
-  "user",
-  "approved"
+  "chat_profile"
  ],
  "fields": [
   {
-   "fieldname": "user",
+   "fieldname": "chat_profile",
    "fieldtype": "Link",
    "in_list_view": 1,
-   "label": "User",
-   "options": "User"
-  },
-  {
-   "default": "0",
-   "fieldname": "approved",
-   "fieldtype": "Check",
-   "in_list_view": 1,
-   "label": "Approved"
+   "label": "Chat Profile",
+   "options": "ClefinCode Chat Profile"
   }
  ],
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2024-08-28 13:51:27.573854",
+ "modified": "2024-08-11 12:56:27.894797",
  "modified_by": "Administrator",
  "module": "ClefinCode Chat",
- "name": "ClefinCode Chat Topic Viewers",
+ "name": "ClefinCode WhatsApp Profile Detail",
  "owner": "Administrator",
  "permissions": [],
  "sort_field": "modified",
