--- a/clefincode_chat/clefincode_chat/doctype/clefincode_whatsapp_profile/clefincode_whatsapp_profile.json
+++ b/clefincode_chat/clefincode_chat/doctype/clefincode_whatsapp_profile/clefincode_whatsapp_profile.json
@@ -155,6 +155,7 @@
   },
   {
    "depends_on": "eval: doc.__islocal",
+   "description": "Template names must use only lowercase letters and underscores.",
    "fieldname": "meta_template_name",
    "fieldtype": "Data",
    "label": "Meta Template Name",
@@ -176,7 +177,7 @@
  ],
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2024-09-30 20:57:21.137189",
+ "modified": "2024-10-12 13:56:13.483483",
  "modified_by": "Administrator",
  "module": "ClefinCode Chat",
  "name": "ClefinCode WhatsApp Profile",
